# backend-orchestration

./: Makefile  README.md  claude.md  docker-compose.yml  main.py  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: d4b0db1795c0_initial_migration.py
backend/app/: database.py  logger.py  main.py  models.py
backend/tests/: test_api.py
backend/worker/: tasks.py
infrastructure/: alarms.tf  main.tf  variables.tf
nextflow/: aws_batch.config  params.json  slurm.config
scripts/: debug_pipeline.sh  simulate_traffic.sh
