[tool.poetry]
name = "illumina-orchestrator-backend"
version = "0.1.0"
description = "Backend for Nextflow DRAGEN Pipeline Orchestration"
authors = ["Bioinformatics Engineer"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
celery = {extras = ["redis"], version = "^5.3.1"}
sqlalchemy = "^2.0.19"
psycopg2-binary = "^2.9.7"
pydantic = "^2.1.1"
python-json-logger = "^2.0.7"
alembic = "^1.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.0.282"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
